only finishing touches left here and there

--- a/index.html
+++ b/index.html
@@ -30,26 +30,27 @@
   </head>
   <body>
       <!-- Navbar -->
-        <nav class="blue darken-4">
-            <div class="container">
-                <div class="nav-wrapper">
-                  <a href="#!" class="brand-logo myA">Worshiper's Gathering</a>
-                  <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-                  <ul class="right hide-on-med-and-down">
-                    <li class="active"><a  href="index.html">Home</a></li>
-                    <li><a href="Prayer.html">Prayer</a></li>
-                    <li><a href="Events.html">Events</a></li>
-                    <li><a href="About.html">About</a></li>
-                  </ul>
-                </div>
-              </nav>
-
-              <ul class="sidenav" id="mobile-demo">
-                <li ></li><a  href="index.html">Home</a></li>
-                <li><a href="Prayer.html">Prayer</a></li>
+      <nav class="blue darken-4">
+        <div class="container">
+            <div class="nav-wrapper">
+              <a href="#!" class="brand-logo myA">Worshiper's Gathering</a>
+              <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+              <ul class="right hide-on-med-and-down">
+                <li class="active"><a  href="index.html">Home</a></li>
+                <li ><a href="Prayer.html">Prayer</a></li>
                 <li><a href="Events.html">Events</a></li>
                 <li><a href="About.html">About</a></li>
               </ul>
+            </div>
+          </nav>
+
+    
+      <ul class="sidenav" id="mobile-demo">
+        <li><a href="index.html">Home</a></li>
+            <li><a href="Prayer.html">Prayer</a></li>
+            <li><a href="Events.html">Events</a></li>
+            <li><a href="About.html">About</a></li>
+      </ul>
 
         <!-- Showcase -->
         <div class="showCase  ">
@@ -98,7 +99,7 @@
           </div>
 <!-- weekly verse Section -->
           <section class="weekly-verse animateMe">
-            <div class="verse shadowed">
+            <div class="verse1 shadowed">
                 <h4 class="weekly animateMe">" Weekly Verse "</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, voluptatibus?</p>
             </div>
