--- a/Prayer.html
+++ b/Prayer.html
@@ -62,12 +62,60 @@
 
           <section class="Prayer-section">
             <div class="container">
-                <div class="row">
-                    <div class="col s6 m6 l6">
-                        <div class="divider "></div>
-                        <p class="center">God's Say on Prayer</p>
-                    </div>
+              <h2><span>PRAYER</span></h2>
+              <section class="weekly-verse animateMe">
+                <div class="verse shadowed shadowed3">
+                    <h4 class="weekly animateMe center">" John 15:7 "</h4>
+                    <p class="center">If you abide in me, and my words abide in you, ask whatever you wish, and it will be done for you</p>
                 </div>
+              </section>
+              <div class="divider"></div>
+              <p class="center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque odio ipsa deserunt excepturi quae voluptates numquam. Illo magni iste at.</p>
+              <div class="row">
+                <div class="col s12 m12">
+                  <div class="card">
+                    <div class="card-image">
+                      <img src="./ImageResources/pedro-lima-HtwsbbClBOs-unsplash.jpg">
+                      <span class="card-title">Prayer Request</span>
+                      <a class="btn-floating halfway-fab waves-effect waves-light red modal-trigger" href="#modal1"><i class="material-icons">add</i></a>
+                    </div>
+                    <div class="card-content">
+                      <p>We're Pleased to guide and help you in through out prayer, Please Press the red Button to submit a prayer request</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Model -->
+              <div id="modal1" class="modal">
+                <div class="modal-content">
+                  <h4 class="center">Prayer Request</h4>
+                  
+                  <div class="row">
+                    <form class="col s12">
+                      <div class="row">
+                        <div class="input-field col s6">
+                          <i class="material-icons prefix">account_circle</i>
+                          <input id="icon_prefix" type="text" class="validate">
+                          <label for="icon_prefix">First Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                          <i class="material-icons prefix">phone</i>
+                          <input id="icon_telephone" type="tel" class="validate">
+                          <label for="icon_telephone">Telephone</label>
+                        </div>
+                        <div class="input-field col s12">
+                          <textarea id="textarea1" class="materialize-textarea"></textarea>
+                          <label for="textarea1" placeholder="Please Provide a few details on your Prayer request..... ">Request Details</label>
+                        </div>
+                        <button class="btn waves-effect waves-light right blue" type="submit" name="action">Send
+                          <i class="material-icons right">send</i>
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+                
+              </div>
             </div>
         </section>
 
