added the form on the front page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
      <!--Import Google Icon Font-->
      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Gotu&display=swap" rel="stylesheet">
      <!--Import materialize.css-->
+    
      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
      <link rel="stylesheet" href="Styles.css">
@@ -29,6 +31,12 @@
     <title>Worshiper's Gathering | Worship Ministries</title>
   </head>
   <body>
+    <!-- COVID-19 alert -->
+    <div class="alert-covid center-align">
+      <p>We will not be gathering for Sunday Services at Montreal Rd and will be suspending 
+        all midweek gatherings until at least the end of April. <a class="red darken-4 btn covid" href="Events.html">Read More</a> </p>
+        
+    </div>
       <!-- Navbar -->
       <nav class="blue darken-4">
         <div class="container">
@@ -62,31 +70,26 @@
                     <div class="slider">
                         <ul class="slides">
                           <li>
-                            <img src="./ImageResources/Logo.jpg"> 
+                            <img src="./ImageResources/WhatsApp Image 2020-03-21 at 9.37.09 PM.jpeg"> 
                             <div class="caption center-align">
-                              <h3>This is our big Tagline!</h3>
-                              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                              <h5 class="psalms">“ Worship the the Lord in the splendor of his holiness;
+                                Tremple before him, all the earth ”
+                              </h5>
+                              <h5 class="light grey-text text-lighten-3">Psalms 96:5</h5>
                             </div>
                           </li>
                           <li>
-                            <img src="./ImageResources//priscilla-du-preez-acUvSUltvHo-unsplash.jpg"> <!-- random image -->
+                            <img src="./ImageResources//WhatsApp Image 2020-03-21 at 9.37.12 PM.jpeg"> <!-- random image -->
                             <div class="caption left-align">
-                              <h3>Left Aligned Caption</h3>
-                              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                              <h5 class="Prayer">“ If you Believe , You will receive whatever you ask for in Prayer ”</h5>
+                              <h5 class="light grey-text text-lighten-3">Mathew 21:22</h5>
                             </div>
                           </li>
                           <li>
-                            <img src="./ImageResources/samantha-sophia-NaWKMlp3tVs-unsplash.jpg"> <!-- random image -->
+                            <img src="./ImageResources/WhatsApp Image 2020-03-21 at 9.38.36 PM.jpeg"> <!-- random image -->
                             <div class="caption right-align">
-                              <h3>Right Aligned Caption</h3>
-                              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-                            </div>
-                          </li>
-                          <li>
-                            <img src="./ImageResources/ben-white-9O1oQ9SzQZQ-unsplash.jpg"> <!-- random image -->
-                            <div class="caption center-align">
-                              <h3>This is our big Tagline!</h3>
-                              <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+                              <h5 class="Prayer">“ For where two or three are gathered in my name, there am I among them ”</h5>
+                              <h5 class="light grey-text text-lighten-3">Matthew 18:20</h5>
                             </div>
                           </li>
                         </ul>
@@ -100,14 +103,14 @@
 <!-- weekly verse Section -->
           <section class="weekly-verse animateMe">
             <div class="verse1 shadowed">
-                <h4 class="weekly animateMe">" Weekly Verse "</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, voluptatibus?</p>
+                <h4 class="weekly animateMe Prayer">“ Weekly Verse ”</h4>
+                <p>Therefore encourage one another and build one another up, just as you are doing. <span class="bold">1 Thessalonians 5:11 </span></p>
             </div>
           </section>
 
     <!-- Upcoming Events -->
 
-    <section class="upcoming-events animateMe">
+    <!-- <section class="upcoming-events animateMe">
         <div class="divider"></div>
         <h4 class="center text-blue">Events</h4>
         <div class="container">
@@ -174,7 +177,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Service Hours -->
 
@@ -184,13 +187,10 @@
         <h4 class="center">Service hours</h4>
         <div class="shadowed2">
           <ul class="collection card hoverable">
-            <li class="collection-item center"><p>From xxxxx To xxxx On Saturday</p></li>
+            <li class="collection-item center"><p>Tuesday <span class="bold">6:00 PM</span>  To  <span class="bold">8:30 PM</span> </p></li>
           </ul>
           <ul class="collection card hoverable">
-            <li class="collection-item center"><p>From xxxxx To xxxx On Saturday</p></li>
-          </ul>
-          <ul class="collection card hoverable">
-            <li class="collection-item center"><p>From xxxxx To xxxx On Saturday</p></li>
+            <li class="collection-item center"><p>Saturday <span class="bold">6:00 PM</span> To <span class="bold"> 8:30 PM</span> </p></li>
           </ul>
         </div>
       </div>
@@ -207,9 +207,9 @@
         </div>
         <div class="col s12 m4 l4">
           <ul class="list-footer">
-            <li> <i class="tiny material-icons">location_on</i><a class="grey-text text-lighten-3" href="#!">123 Main st</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Ottawa ON</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">ABC 123</a></li>
+            <li> <i class="tiny material-icons">location_on</i><a class="grey-text text-lighten-3" href="#!">235 Montreal Rd,</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Vanier, ON</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">K1L 5P8</a></li>
             <li><a class="grey-text text-lighten-3" href="#!">Canada</a></li>
           </ul>
         </div>
